--- a/home.css
+++ b/home.css
@@ -8,6 +8,13 @@
     margin-right: 5%;
 }*/
 
+.row1{
+    height: 20%;
+}
+
+.row2, .row3{
+    height: 30%;
+}
 
 .row1 h1{
     font-size: 50px;
@@ -24,7 +31,6 @@
 .row3 h1{
     font-size: 150px;
     text-align: right;
-
 }
 
 .front{
@@ -34,6 +40,7 @@
     height: 100vh;
     width: 100%;
     background: #FAF7F5;
+    padding: 25px;
 }
 
 
@@ -104,7 +111,7 @@
 }
 */
 
-ul li{
+#previewMe ul li{
     display: inline-block;
 }
 
